fix mixed-height captions jumping aruond on mobile

--- a/_sass/2_components/carousel.scss
+++ b/_sass/2_components/carousel.scss
@@ -81,6 +81,11 @@
 		width: calc(100vw - 3rem);
 	}
 }
+@media (min-width: $media-lg) {
+	.carousel-listItem {
+		width: calc(50vw - 3rem);
+	}
+}
 @media (min-width: 1408px) {
 	.carousel-listItem {
 		width: 640px;
